--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 permalink: /404.html
-layout: default
+layout: wrapper
 ---
 
 <style type="text/css" media="screen">
@@ -11,7 +11,7 @@ layout: default
   }
   h1 {
     margin: 30px 0;
-    font-size: 4em;
+    font-size: 6em;
     line-height: 1;
     letter-spacing: -1px;
   }
