--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@ layout: wrapper
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Page not found?</strong></p>
+  <p>Yes, we know :p </p>
+  <p>It is in the making :D, or it really doesn't exist!</p>
 </div>
